--- a/.classpath
+++ b/.classpath
@@ -8,14 +8,15 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -24,5 +25,16 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/com.springsource.net.sf.cglib-2.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/com.springsource.org.junit-4.7.0.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/mariadb-java-client-2.6.0.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-asm-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-beans-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-context-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-core-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-expression-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-jdbc-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-workspace/spring/jars/spring-test-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
